fixed background and spacing

--- a/style.css
+++ b/style.css
@@ -85,14 +85,14 @@ html {
 
 #game-bg img {
     display: block;
-    max-width: 100%;
+    max-height: 100%;
 }
 
 #game-area {
     background-image: url(images/background1.jpg);
     background-size: cover;
     background-position: center;
-    height: 100%;
+    /* height: 100%; */
     text-align: center;
     /* padding-bottom: 5px; */
     position: relative;
@@ -103,8 +103,8 @@ html {
     grid-template-columns: 16.5% 16.5% 16.5% 16.5% 16.5% 16.5%;
     grid-template-rows: 33% 33% 33%; */
 
-    display: flex;
-    flex-flow: row wrap;
+    /* display: flex;
+    flex-flow: row wrap; */
 }
 
 .card-container {
@@ -112,8 +112,10 @@ html {
     /* position: relative; */
     /* margin: 0 auto; */
     /* width: 85%; */
-    flex: 1 0 16%;
+    /* flex: 1 0 16%; */
     margin: 5px 0;
+    width: 16%;
+    display: inline-block;
     
     /* flex-grow: 1;
     flex: 1 1 16%; */
@@ -295,8 +297,11 @@ img.back:hover {
 }
 
 @media screen and (orientation: portrait){
+    #game-bg {
+
+    }
     .card-container {
-        /* flex: 1 0 30%; */
+        width: 27%;
     }
     #game-area {
         /* grid-template-columns: 33% 33% 33%;
